beccacurry-website-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beccacurry-website-dev
spec:
  selector:
    app: art-website-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
